enhanced explanation of remainder

--- a/content/frombase10.html
+++ b/content/frombase10.html
@@ -26,7 +26,8 @@
 
 <p><strong>Step2:</strong> Look at the highest place value (25) and ask "How many 25s fit into 67?" </p>
 <p class="indent1">The Answer is <span class="expression" exp="_echo(2)"></span> because
-    <span class="expression" exp="_echo(2) \times 25 = 50"></span>.</p>
+    <span class="expression" exp="_echo(2) \times 25 = 50"></span>, but 
+    <span class="expression" exp="_echo(3) \times 25 = 75"></span> is too big.</p>
     <p class="indent1">Now put that number and the product in the chart:</p>
 
 <table class="base-chart"  num=232_5 top=both bottom=2 demo=true></table>
@@ -36,7 +37,8 @@
 
 <p><strong>Step4:</strong> Look at the next place value (5) and ask "How many 5s fit into this reminder (17)?" </p>
 <p class="indent1">The Answer is <span class="expression" exp="_echo(3)"></span> because
-    <span class="expression" exp="_echo(3) \times 5 = 15"></span>.</p>
+    <span class="expression" exp="_echo(3) \times 5 = 15"></span>, but
+    <span class="expression" exp="_echo(4) \times 5 = 20"></span> is too big.</p>
     <p class="indent1">Now put that number and the product in the chart:</p>
 
 <table class="base-chart"  num=232_5 top=both bottom=21 demo=true></table>
