--- a/content/test.html
+++ b/content/test.html
@@ -48,6 +48,23 @@
 <p class="expression" exp="longadd(['55_6', '14_5', 20], 6)"></p>
 <p class="expression" exp="longadd(['55_6', '14_5', 20], 6)"></p>
 
+<p>Grid</p>
+
+<table class="grid">
+  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+</table>
+
+<table class="grid">
+  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+</table>
+
+<div class="grids" num="20:3"></div>
+
+<div class="grids" num="101_4"></div>
 
 <h2> mathjax tests </h2>
 
