more blanks on equation

--- a/content/littleboxes.html
+++ b/content/littleboxes.html
@@ -69,7 +69,7 @@ You could also write it as an equation: \( 2 \times 10 + 3 \times 1 = 23 \)
 <p class="grids" num="311_4"></p>
 <p class="indent1">Equation for the number of boxes:
 <span class="expression"
-  exp="_prn(3) \times 16 + _prn(1) \times 4 + _prn(1) \times 1 = _prn('311_4')"></span></p>
+  exp="_prn(3) \times _prn(16) + _prn(1) \times _prn(4) + _prn(1) \times _prn(1) = _prn('311_4')"></span></p>
 <p class="indent1">The Base is <span class="expression" exp="_prn(4)"></span>
   and the shorthand is <span class="expression" vars="x='311_4';" exp="_prn(x,4) = _prn(x)"></span></p>
 </li>
