--- a/content/counting.html
+++ b/content/counting.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases: Counting</h1>
+<h1>Devotion Math League Bases: 1. Counting</h1>
 <table class="student-info"></table>
 <div class="main">
 
