--- a/content/exponents.html
+++ b/content/exponents.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases: Exponents</h1>
+<h1>Devotion Math League Bases: 2. Exponents</h1>
 
 <table class="student-info"></table>
 <div class="main">
