number each topic. add page breaks, rename tobase10

--- a/content/01_counting.html
+++ b/content/01_counting.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases: 1. Counting</h1>
+<h1>Devotion Math League Bases 1: Counting</h1>
 <table class="student-info"></table>
 <div class="main">
 
@@ -101,7 +101,6 @@
 </ol>
 
 <h2>Practice</h2>
-
 <p>Fill in these sequences. They all increment by 1.</p>
 
 <ol>
@@ -125,9 +124,12 @@
 
 <li>Fill in this sequence using Base 5:</li>
 <p class="expression" len=12 exp="_prn(n+29,5)" hints=[2,6] ></p> 
+</ol>
 
-<p><br>Now things get a bit harder. These sequences increment by more than 1.</p>
+<h2 class="page-break">More Practice</h2>
+<p>Now things get a bit harder. These sequences increment by more than 1.</p>
 
+<ol>
 <li>Fill in this sequence using Base 10:</li>
 <p class="expression" len=12 exp="_prn(2*n,10)" hints=[2,4,7,11] ></p> 
 
