--- a/content/02_exponents.html
+++ b/content/02_exponents.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases: 2. Exponents</h1>
+<h1>Devotion Math League Bases 2: Exponents</h1>
 
 <table class="student-info"></table>
 <div class="main">
@@ -45,7 +45,7 @@
 <li class="expression" len=4 exp="sub('9^{$}', n) = _prn(9**n)" ></li>
 </ol>
 
-<p> Write each number in the exponent form. For example: 27 = \( 3^3 \). If there is more than one correct answer, write them all.</p>
+<p class="page-break"> Write each number in the exponent form. For example: 27 = \( 3^3 \). If there is more than one correct answer, write them all.</p>
 
 <table style='width:100%'><tr><td>
 <ol>
