--- a/content/03_tobase10.html
+++ b/content/03_tobase10.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases: Converting to Base 10</h1>
+<h1>Devotion Math League Bases 3: Converting to Base 10</h1>
 
 <table class="student-info"></table>
 <div class="main">
@@ -41,7 +41,7 @@
 <p>Or: \( 213_{(4)} = 39_{(10)}  \)</p>
 
 
-<h2>Practice</h2>
+<h2 class="page-break">Practice</h2>
 <ol>
 <li>Convert \( 212_{(3)} \) to Base 10</li>
 <table class="base-chart" num=212_3 top=both ></table>
@@ -90,7 +90,7 @@
 <li class="expression" exp="prn(53, 2) = _prn(53, 10)" blank=8 ></li>
 </ol>
 
-<p>Convert to Base 10. These are a bit harder.</p>
+<p class="page-break">Convert to Base 10. These are a bit harder.</p>
 
 <ol>
 <li class="expression" exp="prn(484, 6) = _prn(484, 10)" blank=8 ></li>
