--- a/content/01_counting.html
+++ b/content/01_counting.html
@@ -53,7 +53,7 @@
 </li>
 
 <li>Fill in this Base 10 sequence:
-  <p class="series indent1" len=17 exp="_sub('$',n)" hints=[3,4,12,16] ></p></li>
+  <p class="expression indent1" len=17 exp="_sub('$',n)" hints=[3,4,12,16] ></p></li>
 </ol>
 
 
