--- a/content/02_exponents.html
+++ b/content/02_exponents.html
@@ -22,9 +22,15 @@
 <p> Example: \( 4^3 \) means \( 4 \times 4 \times 4 = 64\) </p>
 
 <ol>
-<li> \( 3^2 \) means __________________ <span class="expression" exp=" = _prn(3**2)" ></span></li>
-<li> \( 2^3 \) means __________________ <span class="expression" exp=" = _prn(2**3)" ></span></li>
-<li> \( 2^4 \) means __________________ <span class="expression" exp=" = _prn(2**4)" ></span></li>
+<li> \( 3^2 \) means 
+    <span class="expression" blank=15 exp="_echo('3 \\times 3')" ></span>
+    <span class="expression" exp=" = _prn(3**2)" ></span></li>
+<li> \( 2^3 \) means
+    <span class="expression" blank=15 exp="_echo('2 \\times 2 \\times 2')" ></span>
+    <span class="expression" exp=" = _prn(2**3)" ></span></li>
+<li> \( 2^4 \) means
+    <span class="expression" blank=15 exp="_echo('2 \\times 2 \\times 2 \\times 2')" ></span>
+    <span class="expression" exp=" = _prn(2**4)" ></span></li>
 </ol>
 
 <p> What does: \( 4^0 \) mean? </p>
