start working on "base-ic" calendar

--- a/content/test.html
+++ b/content/test.html
@@ -18,6 +18,16 @@
 <div class="main">
 
 
+<p>Base-ic Calendar</p>
+
+
+<div class="cal-box">
+  <p class="cal-value">4</p>
+  <p class="cal-digits">11</p>
+  <p class="cal-base">Base _____</p>
+</div>
+
+
 <p>Test Cases</p>
 
 <table class="base-chart" num=89:5 top=both bottom=dp></table>
