--- a/content/02_exponents.html
+++ b/content/02_exponents.html
@@ -40,15 +40,15 @@
 <h2> Practice</h2>
 <p>Fill in the series</p>
 <ol>
-<li class="expression" len=7 exp="sub('2^{$}', n) = _prn(2**n)" ></li>
-<li class="expression" len=5 exp="sub('3^{$}', n) = _prn(3**n)" ></li>
-<li class="expression" len=4 exp="sub('4^{$}', n) = _prn(4**n)" ></li>
-<li class="expression" len=4 exp="sub('5^{$}', n) = _prn(5**n)" ></li>
-<li class="expression" len=4 exp="sub('6^{$}', n) = _prn(6**n)" ></li>
-<li class="expression" len=4 exp="sub('7^{$}', n) = _prn(7**n)" ></li>
-<li class="expression" len=4 exp="sub('8^{$}', n) = _prn(8**n)" ></li>
-<li class="expression" len=4 exp="sub('9^{$}', n) = _prn(9**n)" ></li>
-<li class="expression" len=4 exp="sub('10^{$}',n) = _prn(10**n)" blank=5 ></li>
+<li class="expression series" len=7 exp="sub('2^{$}', n) = _prn(2**n)" ></li>
+<li class="expression series" len=5 exp="sub('3^{$}', n) = _prn(3**n)" ></li>
+<li class="expression series" len=4 exp="sub('4^{$}', n) = _prn(4**n)" ></li>
+<li class="expression series" len=4 exp="sub('5^{$}', n) = _prn(5**n)" ></li>
+<li class="expression series" len=4 exp="sub('6^{$}', n) = _prn(6**n)" ></li>
+<li class="expression series" len=4 exp="sub('7^{$}', n) = _prn(7**n)" ></li>
+<li class="expression series" len=4 exp="sub('8^{$}', n) = _prn(8**n)" ></li>
+<li class="expression series" len=4 exp="sub('9^{$}', n) = _prn(9**n)" ></li>
+<li class="expression series" len=4 exp="sub('10^{$}',n) = _prn(10**n)" blank=5 ></li>
 </ol>
 
 <p class="page-break"> Write each number in the exponent form. For example: 27 = \( 3^3 \).<br>
