space adjustments and adjusting difficulty curve a bit for tobase10

--- a/content/02_exponents.html
+++ b/content/02_exponents.html
@@ -40,42 +40,44 @@
 <h2> Practice</h2>
 <p>Fill in the series</p>
 <ol>
-<li class="expression series" len=7 exp="sub('2^{$}', n) = _prn(2**n)" ></li>
-<li class="expression series" len=5 exp="sub('3^{$}', n) = _prn(3**n)" ></li>
-<li class="expression series" len=4 exp="sub('4^{$}', n) = _prn(4**n)" ></li>
-<li class="expression series" len=4 exp="sub('5^{$}', n) = _prn(5**n)" ></li>
-<li class="expression series" len=4 exp="sub('6^{$}', n) = _prn(6**n)" ></li>
-<li class="expression series" len=4 exp="sub('7^{$}', n) = _prn(7**n)" ></li>
-<li class="expression series" len=4 exp="sub('8^{$}', n) = _prn(8**n)" ></li>
-<li class="expression series" len=4 exp="sub('9^{$}', n) = _prn(9**n)" ></li>
-<li class="expression series" len=4 exp="sub('10^{$}',n) = _prn(10**n)" blank=5 ></li>
+<li class="expression series vspace1" len=7 exp="sub('2^{$}', n) = _prn(2**n)" ></li>
+<li class="expression series vspace1" len=5 exp="sub('3^{$}', n) = _prn(3**n)" ></li>
+<li class="expression series vspace1" len=4 exp="sub('4^{$}', n) = _prn(4**n)" ></li>
+<li class="expression series vspace1" len=4 exp="sub('5^{$}', n) = _prn(5**n)" ></li>
+<li class="expression series vspace1" len=4 exp="sub('6^{$}', n) = _prn(6**n)" ></li>
+<li class="expression series vspace1" len=4 exp="sub('7^{$}', n) = _prn(7**n)" ></li>
+<li class="expression series vspace1" len=4 exp="sub('8^{$}', n) = _prn(8**n)" ></li>
+<li class="expression series vspace1" len=4 exp="sub('9^{$}', n) = _prn(9**n)" ></li>
+<li class="expression series vspace1" len=4 exp="sub('10^{$}',n) = _prn(10**n)" blank=5 ></li>
 </ol>
 
-<p class="page-break"> Write each number in the exponent form. For example: 27 = \( 3^3 \).<br>
-  HINT: look at your answers above.</p>
+<h2 class="page-break"> More Practice</h2>
+
+<p> Write each number in the exponent form. For example: 27 = \( 3^3 \).<br>
+  HINT: look at your answers from the previous page.</p>
 
 <table style='width:100%'><tr><td>
 <ol>
-<li class="expression" exp="prn(10**2) = 10^2" ></li>
-<li class="expression" exp="prn(2**6) = _echo('2^6') \text{ or } _echo('4^3')" ></li>
-<li class="expression" exp="prn(9**3) = _echo('9^3')" ></li>
-<li class="expression" exp="prn(3**2) = _echo('3^2') \text{ or } _echo('9^1')" ></li>
-<li class="expression" exp="prn(2**5) = _echo('2^5')" ></li>
-<li class="expression" exp="prn(2**4) = _echo('2^4') \text{ or } _echo('4^2')" ></li>
-<li class="expression" exp="prn(5**3) = _echo('5^3')" ></li>
-<li class="expression" exp="prn(6**3) = _echo('6^3')" ></li>
+<li class="expression vspace1" exp="prn(10**2) = 10^2" ></li>
+<li class="expression vspace1" exp="prn(2**6) = _echo('2^6') \text{ or } _echo('4^3')" ></li>
+<li class="expression vspace1" exp="prn(9**3) = _echo('9^3')" ></li>
+<li class="expression vspace1" exp="prn(3**2) = _echo('3^2') \text{ or } _echo('9^1')" ></li>
+<li class="expression vspace1" exp="prn(2**5) = _echo('2^5')" ></li>
+<li class="expression vspace1" exp="prn(2**4) = _echo('2^4') \text{ or } _echo('4^2')" ></li>
+<li class="expression vspace1" exp="prn(5**3) = _echo('5^3')" ></li>
+<li class="expression vspace1" exp="prn(6**3) = _echo('6^3')" ></li>
 </ol>
 
 </td><td>
 <ol>
-<li class="expression" exp="prn(2**3) = _echo('2^3')" ></li>
-<li class="expression" exp="prn(5**2) = _echo('5^2')" ></li>
-<li class="expression" exp="prn(8**3) = _echo('8^3')" ></li>
-<li class="expression" exp="prn(6**2) = _echo('6^2')" ></li>
-<li class="expression" exp="prn(3**4) = _echo('3^4') \text{ or } _echo('9^2')" ></li>
-<li class="expression" exp="prn(7**2) = _echo('7^2')" ></li>
-<li class="expression" exp="prn(9**3) = _echo('9^3')" ></li>
-<li class="expression" exp="prn(7**3) = _echo('7^3')" ></li>
+<li class="expression vspace1" exp="prn(2**3) = _echo('2^3')" ></li>
+<li class="expression vspace1" exp="prn(5**2) = _echo('5^2')" ></li>
+<li class="expression vspace1" exp="prn(8**3) = _echo('8^3')" ></li>
+<li class="expression vspace1" exp="prn(6**2) = _echo('6^2')" ></li>
+<li class="expression vspace1" exp="prn(3**4) = _echo('3^4') \text{ or } _echo('9^2')" ></li>
+<li class="expression vspace1" exp="prn(7**2) = _echo('7^2')" ></li>
+<li class="expression vspace1" exp="prn(9**3) = _echo('9^3')" ></li>
+<li class="expression vspace1" exp="prn(7**3) = _echo('7^3')" ></li>
 </ol>
 
 </td></tr></table>
@@ -84,26 +86,26 @@
 
 <table style='width:100%'><tr><td>
 <ol>
-<li class="expression" exp="6^4 = _prn(6**4)" blank=8></li>
-<li class="expression" exp="4^4 = _prn(4**4)" blank=8></li>
-<li class="expression" exp="7^4 = _prn(7**4)" blank=8></li>
-<li class="expression" exp="2^7 = _prn(2**7)" blank=8></li>
-<li class="expression" exp="4^5 = _prn(4**5)" blank=8></li>
-<li class="expression" exp="5^4 = _prn(5**4)" blank=8></li>
-<li class="expression" exp="27^0 = _prn(27**0)" blank=8></li>
-<li class="expression" exp="11^2 = _prn(11**2)" blank=8></li>
+<li class="expression vspace1" exp="6^4 = _prn(6**4)" blank=8></li>
+<li class="expression vspace1" exp="4^4 = _prn(4**4)" blank=8></li>
+<li class="expression vspace1" exp="7^4 = _prn(7**4)" blank=8></li>
+<li class="expression vspace1" exp="2^7 = _prn(2**7)" blank=8></li>
+<li class="expression vspace1" exp="4^5 = _prn(4**5)" blank=8></li>
+<li class="expression vspace1" exp="5^4 = _prn(5**4)" blank=8></li>
+<li class="expression vspace1" exp="27^0 = _prn(27**0)" blank=8></li>
+<li class="expression vspace1" exp="11^2 = _prn(11**2)" blank=8></li>
 </ol>
 
 </td><td>
 <ol>
-<li class="expression" exp="8^4 = _prn(8**4)" blank=8></li>
-<li class="expression" exp="2^8 = _prn(2**8)" blank=8></li>
-<li class="expression" exp="3^5 = _prn(3**5)" blank=8></li>
-<li class="expression" exp="5^5 = _prn(5**5)" blank=8></li>
-<li class="expression" exp="3^6 = _prn(3**6)" blank=8></li>
-<li class="expression" exp="9^4 = _prn(9**4)" blank=8></li>
-<li class="expression" exp="12^2 = _prn(12**2)" blank=8></li>
-<li class="expression" exp="2^9 = _prn(2**9)" blank=8></li>
+<li class="expression vspace1" exp="8^4 = _prn(8**4)" blank=8></li>
+<li class="expression vspace1" exp="2^8 = _prn(2**8)" blank=8></li>
+<li class="expression vspace1" exp="3^5 = _prn(3**5)" blank=8></li>
+<li class="expression vspace1" exp="5^5 = _prn(5**5)" blank=8></li>
+<li class="expression vspace1" exp="3^6 = _prn(3**6)" blank=8></li>
+<li class="expression vspace1" exp="9^4 = _prn(9**4)" blank=8></li>
+<li class="expression vspace1" exp="12^2 = _prn(12**2)" blank=8></li>
+<li class="expression vspace1" exp="2^9 = _prn(2**9)" blank=8></li>
 </ol>
 
 </td></tr></table>
