--- a/content/03_tobase10.html
+++ b/content/03_tobase10.html
@@ -25,7 +25,7 @@
     In this case, we make 3 columns because \( 213_{(4)} \) is a 3-digit number.</p>
 <table class="base-chart" demo=true num=213_4 top=exponents ></table>
 
-<p><strong>Step2:</strong> Calculate the exponents. These are the <em>place values</em> . </p>
+<p><strong>Step2:</strong> Calculate the exponents. These are the <em>place values</em>.</p>
 <table class="base-chart" demo=true num=213_4 top=both ></table>
 
 <p><strong>Step3:</strong> Put in the digits of the number. In this example they are 2, 1, and 3. </p>
@@ -49,60 +49,54 @@
 <li>Convert \( 423_{(5)} \) to Base 10</li>
 <table class="base-chart" num=423_5 top=both ></table>
 
-<li>Convert \( 100_{(6)} \) to Base 10</li>
-<table class="base-chart" num=100_6 top=both ></table>
+<li>Convert \( 55_{(9)} \) to Base 10</li>
+<table class="base-chart" num=55_9 top=both ></table>
 
 <li>Convert \( 11011_{(2)} \) to Base 10</li>
-<table class="base-chart" num=11011_2 top=both ></table>
+<table class="base-chart" num=11011_2 top=exponents ></table>
 
 <li>Convert \( 1232_{(4)} \) to Base 10</li>
-<table class="base-chart" num=1232_4 top=both ></table>
-
-<li>Convert \( 4241_{(5)} \) to Base 10</li>
-<table class="base-chart" num=4241_5 top=exponents ></table>
+<table class="base-chart" num=1232_4 top=exponents ></table>
 
 <li>Convert \( 325_{(7)} \) to Base 10</li>
-<table class="base-chart" num=325_7 top=exponents ></table>
+<table class="base-chart" num=325_7 top=none ></table>
 
 <li>Convert \( 702_{(8)} \) to Base 10</li>
-<table class="base-chart" num=702_8 top=exponents ></table>
+<table class="base-chart" num=702_8 top=none ></table>
 
-<li>Convert \( 55_{(9)} \) to Base 10</li>
-<table class="base-chart" num=55_9 top=exponents ></table>
-
-<li>Convert \( 1101101_{(2)} \) to Base 10</li>
-<table class="base-chart" num=1101101_2 top=none ></table>
 </ol>
 
 <h2>More Practice</h2>
 <p>Convert to Base 10.</p>
 
 <ol>
-<li class="expression" exp="prn(55, 7) = _prn(55, 10)" blank=8 ></li>
-<li class="expression" exp="prn(80, 4) = _prn(80, 10)" blank=8 ></li>
-<li class="expression" exp="prn(99, 6) = _prn(99, 10)" blank=8 ></li>
-<li class="expression" exp="prn(45, 2) = _prn(45, 10)" blank=8 ></li>
-<li class="expression" exp="prn(100, 9) = _prn(100, 10)" blank=8 ></li>
-<li class="expression" exp="prn(100, 3) = _prn(100, 10)" blank=8 ></li>
-<li class="expression" exp="prn(100, 5) = _prn(100, 10)" blank=8 ></li>
-<li class="expression" exp="prn(100, 4) = _prn(100, 10)" blank=8 ></li>
-<li class="expression" exp="prn(78, 8) = _prn(78, 10)" blank=8 ></li>
-<li class="expression" exp="prn(53, 2) = _prn(53, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(45, 7) = _prn(45, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(67, 8) = _prn(67, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(89, 6) = _prn(89, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(100, 9) = _prn(100, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(44, 2) = _prn(44, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(100, 3) = _prn(100, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(55, 4) = _prn(55, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(100, 5) = _prn(100, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(66, 8) = _prn(66, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(100, 4) = _prn(100, 10)" blank=8 ></li>
 </ol>
 
-<p class="page-break">Convert to Base 10. These are a bit harder.</p>
+<h2 class="page-break">Challenge Problems</h2>
+
+<p>Convert to Base 10. These are a bit harder.</p>
 
 <ol>
-<li class="expression" exp="prn(484, 6) = _prn(484, 10)" blank=8 ></li>
-<li class="expression" exp="prn(393, 3) = _prn(393, 10)" blank=8 ></li>
-<li class="expression" exp="prn(727, 9) = _prn(727, 10)" blank=8 ></li>
-<li class="expression" exp="prn(656, 8) = _prn(656, 10)" blank=8 ></li>
-<li class="expression" exp="prn(343, 2) = _prn(343, 10)" blank=8 ></li>
-<li class="expression" exp="prn(505, 7) = _prn(505, 10)" blank=8 ></li>
-<li class="expression" exp="prn(222, 3) = _prn(222, 10)" blank=8 ></li>
-<li class="expression" exp="prn(606, 5) = _prn(606, 10)" blank=8 ></li>
-<li class="expression" exp="prn(474, 4) = _prn(474, 10)" blank=8 ></li>
-<li class="expression" exp="prn(2882, 10) = _prn(2882, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(484, 6) = _prn(484, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(393, 3) = _prn(393, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(727, 9) = _prn(727, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(656, 8) = _prn(656, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(343, 2) = _prn(343, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(505, 7) = _prn(505, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(222, 3) = _prn(222, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(909, 5) = _prn(909, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(444, 4) = _prn(444, 10)" blank=8 ></li>
+<li class="expression vspace2" exp="prn(28182, 10) = _prn(28182, 10)" blank=8 ></li>
 </ol>
 
 </div>
