reorder / remove redundancy

--- a/content/02_exponents.html
+++ b/content/02_exponents.html
@@ -58,12 +58,12 @@
 
 <table style='width:100%'><tr><td>
 <ol>
-<li class="expression vspace1" exp="prn(10**2) = 10^2" ></li>
-<li class="expression vspace1" exp="prn(2**6) = _echo('2^6') \text{ or } _echo('4^3')" ></li>
+<li class="expression vspace1" exp="prn(10**2) = _echo('10^2')" ></li>
+<li class="expression vspace1" exp="prn(2**4) = _echo('2^4') \text{ or } _echo('4^2')" ></li>
 <li class="expression vspace1" exp="prn(9**3) = _echo('9^3')" ></li>
 <li class="expression vspace1" exp="prn(3**2) = _echo('3^2') \text{ or } _echo('9^1')" ></li>
 <li class="expression vspace1" exp="prn(2**5) = _echo('2^5')" ></li>
-<li class="expression vspace1" exp="prn(2**4) = _echo('2^4') \text{ or } _echo('4^2')" ></li>
+<li class="expression vspace1" exp="prn(2**6) = _echo('2^6') \text{ or } _echo('4^3') \text{ or } _echo('8^2')" ></li>
 <li class="expression vspace1" exp="prn(5**3) = _echo('5^3')" ></li>
 <li class="expression vspace1" exp="prn(6**3) = _echo('6^3')" ></li>
 </ol>
@@ -76,13 +76,13 @@
 <li class="expression vspace1" exp="prn(6**2) = _echo('6^2')" ></li>
 <li class="expression vspace1" exp="prn(3**4) = _echo('3^4') \text{ or } _echo('9^2')" ></li>
 <li class="expression vspace1" exp="prn(7**2) = _echo('7^2')" ></li>
-<li class="expression vspace1" exp="prn(9**3) = _echo('9^3')" ></li>
+<li class="expression vspace1" exp="prn(10**3) = _echo('10^3')" ></li>
 <li class="expression vspace1" exp="prn(7**3) = _echo('7^3')" ></li>
 </ol>
 
 </td></tr></table>
 
-<h2> Challenge Problems (for 5th and 6th graders)</h2>
+<h2> Challenge Problems </h2>
 
 <table style='width:100%'><tr><td>
 <ol>
