regrouping exercises + grid hide option

--- a/content/littleboxes.html
+++ b/content/littleboxes.html
@@ -181,9 +181,35 @@ is <strong>WRONG</strong> because you can't have
 <span class="expression" exp="= _prn(13) = _prn(13, 3)"></span></p>
 
 
-<h2>Regrouping Practice</h2>
+<h2 class="page-break">Regrouping Practice</h2>
+<ol>
 
+<li>Draw the Base 4 boxes for the number 7.
+<p class="grids" hide=True num="7:4"></p>
+<p class="expression indent1" exp="7 = _prn(7,4)"></p>
+</li>
 
+<li>Draw the Base 5 boxes for the number 14.
+<p class="grids" hide=True num="14:5"></p>
+<p class="expression indent1" exp="14 = _prn(14,5)"></p>
+</li>
+
+<li>Draw the Base 3 boxes for the number 14.
+<p class="grids" hide=True num="14:3"></p>
+<p class="expression indent1" exp="14 = _prn(14,3)"></p>
+</li>
+
+<li>Draw the Base 3 boxes for the number 19.
+<p class="grids" hide=True num="19:3"></p>
+<p class="expression indent1" exp="19 = _prn(19,3)"></p>
+</li>
+
+<li>Draw the Base 5 boxes for the number 63.
+<p class="grids" hide=True num="63:5"></p>
+<p class="expression indent1" exp="63 = _prn(63,5)"></p>
+</li>
+
+</ol>
 
 </div>
 </body>
